2017/11-10.txt
1510273506
jfo
andrewrk: been messing with darwin Stat, filed an issue with my status.

1510274269
andrewrk
jfo, one thing going on here is there is a concept of alignment

1510274283
jfo
I thought that might have something to do with it

1510274352
andrewrk
in the C ABI, which is what Zig uses for extern structs, fields are in order, and each type has an "ABI Alignment". you can see the ABI alignment for any type in zig by using @alignOf(Type)

1510274744
jfo
how do you think that is being affected by this diff

1510329269
dimenus
andrewrk, assuming you have no reservations I'm going to merge master into llvm6 again (following the guidelines you gave the other day)

1510329271
dimenus
just running tests now

1510335247
andrewrk
dimenus, go for it

1510344114
GitHub131
[zig] andrewrk pushed 1 new commit to master:

1510344115
GitHub131
zig/master 6bf1547 Andrew Kelley: Merge branch 'darwin-stat'...

1510346334
ltr_
hello

1510346382
andrewrk
hi ltr_

1510347510
ltr_
my pc freezes when i compile llvm in debug mode, wtf

1510347558
dimenus
what platform?

1510347563
ltr_
linux

1510347565
dimenus
gcc/ld use a lot of RAM

1510347566
dimenus
:)

1510347574
ltr_
with clang

1510347590
dimenus
andrewrk, is it possible to call zig without a build.zig file?

1510347600
ltr_
i had compiled chromium in this machine with 0 problems, really weird

1510347822
GitHub138
[zig] andrewrk pushed 1 new commit to master:

1510347822
GitHub138
zig/master 403a46a Andrew Kelley: fix test failure on 32 bit windows

1510347915
andrewrk
dimenus, yes, see `zig --help`

1510347928
andrewrk
also `zig build --verbose` tells you what it does

1510348333
dimenus
hmmm, plain '--verbose' does not exist in main.cpp

1510348337
dimenus
maybe it was removed?

1510348345
andrewrk
dimenus, it's in build_runner.zig

1510348354
dimenus
ah

1510348360
andrewrk
zig build compiles build_runner.zig which imports the user's build.zig

1510349181
dimenus
wow, i just broke zig pretty hard

1510349187
dimenus
:D

1510349212
dimenus
var windows.HMODULE =windows.LoadLibraryA("opengl32.lib");

1510349225
dimenus
var rc: windows.HMODULE = windows.LoadLibraryA("opengl32.lib");

1510349279
andrewrk
nice, did you crash the compiler?

1510349372
dimenus
?.c:1:1: note: previous definition is here

1510349372
dimenus
TODO: remember C source location to display here

1510349372
dimenus
F:\code\tools\zig\build-w64-msvc-llvm6\bin\load.zig:1:17: error: compiler bug: @cImport generated invalid zig code

1510349372
dimenus
^

1510349372
dimenus
const windows = @cImport({

1510349382
dimenus
repeated about 100 times

1510349409
andrewrk
sounds like a bug in parsec.cpp

1510349413
andrewrk
ltr_, is working on one of those

1510349484
ltr_
the workarround is to move the declaration of typedef after the definition of the structs

1510349607
GitHub134
[zig] andrewrk pushed 1 new commit to master:

1510349608
GitHub134
zig/master 019f180 Andrew Kelley: fix test failures...

1510351760
andrewrk
dimenus, I just ran into #537

1510351765
GitHub53
[zig] andrewrk pushed 1 new commit to master:

1510351766
GitHub53
zig/master 1403748 Andrew Kelley: disable broken 32 bit windows test...

1510351793
andrewrk
I think I did CryptGetRandom wrong

1510351806
andrewrk
*CryptGenRandom

1510351894
dimenus
tested with llvm5?

1510352420
andrewrk
I tested with both, I think it never worked on 32 bit windows

1510352463
andrewrk


1510352468
andrewrk
see how we have 32 bit windows tests disabled?

1510352686
dimenus
yes, you have me a bit confused though.

1510352694
dimenus
what do you mean you ran into 537? using math functions in i386?

1510352745
andrewrk
see the commit I just pushed

1510355820
GitHub31
[zig] bscheinman opened pull request #609: add epoll and timerfd support on linux (master...linux_timer)

1510356360
GitHub151
[zig] andrewrk pushed 4 new commits to master:

1510356361
GitHub151
zig/master 87407b5 Brendon Scheinman: add epoll and timerfd support on linux

1510356361
GitHub151
zig/master 5ae53da Andrew Kelley: rename test

1510356361
GitHub151
zig/master 5895204 Andrew Kelley: Merge branch 'linux_timer' of

1510356361
GitHub51
[zig] andrewrk closed pull request #609: add epoll and timerfd support on linux (master...linux_timer)

1510356616
GitHub183
[zig] andrewrk pushed 1 new commit to master:

1510356617
GitHub183
zig/master a890380 Andrew Kelley: fix windows trying to run linux-only tests

